[package]
name = "qc-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = "0.4"
rayon = "1.7"
rand = "0.8"

[features]
benchmark = []

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
